--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
